@@ -3,6 +3,7 @@ agar-core-datasource.o
 agar-core-error.o
 agar-core-event.o
 agar-core-object.o
+agar-core-slist.o
 agar-core-tail_queue.o
 agar-core-threads.o
 agar-core-timeout.o
