@@ -18,6 +18,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-core-event.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ads", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-core-slist.ads", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-slist.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-tail_queue.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-tail_queue.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-core-threads.ads", 0, ctxt_repos, 0, 0, 0644},
@@ -56,6 +58,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-core-event.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-object.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-object.ali", 0, ctxt_incdir, 0, 0, 0444},
+  {INST_COPY, "agar-core-slist.ali", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-core-slist.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-tail_queue.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-core-tail_queue.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-core-threads.ali", 0, ctxt_repos, 0, 0, 0644},
